change html/css for left pannel, try to solve bad vertical spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,8 @@ body {
 }
 header {
     border-style: solid;
-    border-color: #72b01d;
+    border-color: #16db65;
+    border-width: 5px;
     padding: 10px 10px 10px 10px;
     text-align: center;
 }
